--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
                     <li><a href="#contenedor">SOBRE NOSOTROS</a></li>
                     <li><a href="#proyectos">PROYECTOS</a></li>
                     <li><a href="#contacto">CONTACTO</a></li>
+                   <button class="switch" id="switch"><i class="fa-solid fa-moon"></i></button>
                 </ul>
             </div>
 
