--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </header>
 
-    <nav class="menu2"> 
+    <nav class="menu-responsive"> 
         <ul>
             <li class="toggle"><a href="#contenedor">SOBRE MÍ</a></li>
             <li class="toggle"><a href="#proyectos">PROYECTOS</a></li>
@@ -53,14 +53,14 @@
         <div class="texto-inicio">
             <h2>
                 <span class="nombre">MARCEL</span><br>
-                <span class="tipeado">DISEÑADOR WEB</span>
+                <span class="tipeado">PROGRAMADOR WEB</span>
             </h2>
             <!-- <button>Contacto</button> -->
             <div class="footer-icon">
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-sharp fa-solid fa-file-arrow-down"></i>
+                <a href="https://www.linkedin.com/in/marcelobrizuela/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a> 
+                <a href="https://github.com/marceelb" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://twitter.com/MarceelBrizuela" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a download="CV Marcelo Brizuela" href="/archivos/CV BRIZUELA MARCELO.pdf" class="curriculum">CV</a>
             </div>
         </div>
    </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="caja-texto2">
             <H2>HABILIDADES</H2><br>
-            <div class="icon"><br>
+            <div class="icons">
                 <i class="fa-brands fa-git-alt"></i>
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
