--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <div class="contacto">
         <div class="datos">CONTACTO</div><br>
         <div class="contactos-icon">
-            <i class="fa-solid fa-envelope"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+            <a href=""><i class="fa-solid fa-envelope"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </div>
    </div>
