se agrego link a los botones

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <div class="contacto">
         <div class="datos">CONTACTO</div><br>
         <div class="contactos-icon">
-            <a href=""><i class="fa-solid fa-envelope"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:marceel.brizuela@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/marcelobrizuela/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </div>
    </div>
